# create-agent-esf5vx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  dependency-updates.yml  security-scan.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
docs/: README.md
docs/api/: authentication.md  documents.md  feedback.md  openapi.json  query.md
docs/architecture/: component-design.md  data-flow.md  monitoring.md  (+2 more)
infrastructure/: README.md
scripts/: README.md  backup-database.sh  cleanup-old-backups.sh  deploy-prod.sh  deploy-staging.sh  generate-test-data.sh  health-check.sh  monitor-performance.sh  rebuild-vector-index.sh  restore-database.sh  rotate-keys.sh
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
src/backend/app/: __init__.py
src/backend/app/api/: __init__.py  dependencies.py  router.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/endpoints/: __init__.py  auth.py  documents.py  feedback.py  health.py  query.py
src/backend/app/core/: __init__.py  config.py  logging.py  security.py  settings.py
src/backend/app/crud/: __init__.py  base.py  crud_document.py  crud_document_chunk.py  crud_feedback.py  crud_query.py  crud_user.py
src/backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
src/backend/app/models/: __init__.py  document.py  document_chunk.py  feedback.py  query.py  user.py
src/backend/app/schemas/: __init__.py  document.py  document_chunk.py  feedback.py  query.py  token.py  user.py
src/backend/app/services/: __init__.py  auth_service.py  document_processor.py  embedding_service.py  feedback_processor.py  file_storage.py  llm_service.py  vector_search.py
src/backend/app/utils/: __init__.py  file_utils.py  pdf_utils.py  token_utils.py  validation.py  vector_utils.py
src/backend/app/vector_store/: __init__.py  base.py  faiss_store.py
src/backend/migrations/: __init__.py  env.py
src/backend/scripts/: __init__.py  benchmark_vector_search.py  create_admin.py  generate_migrations.py  rebuild_index.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/fixtures/: __init__.py
src/backend/tests/fixtures/documents/: __init__.py
src/backend/tests/fixtures/responses/: __init__.py  llm_responses.json
src/backend/tests/fixtures/vectors/: __init__.py  sample_embeddings.json
src/backend/tests/integration/: __init__.py
src/backend/tests/integration/api/: __init__.py  test_document_workflow.py  test_feedback_workflow.py  test_query_workflow.py
src/backend/tests/integration/services/: __init__.py  test_faiss_integration.py  test_llm_integration.py
src/backend/tests/unit/: __init__.py
src/backend/tests/unit/api/: __init__.py  test_auth.py  test_documents.py  test_feedback.py  test_query.py
src/backend/tests/unit/services/: __init__.py  test_document_processor.py  test_embedding_service.py  test_llm_service.py  test_vector_search.py
src/backend/tests/unit/utils/: __init__.py  test_pdf_utils.py  test_vector_utils.py
(+71 files in other folders)
